--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,40 +1,34 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Website project to add a dedicated Tips page containing drinking/water tips content.",
+  "summary": "Website/app to include a feed with drip-water emoji likes and a new Facts page containing human urine facts.",
   "architectural_notes": [],
-  "known_issues": [],
+  "known_issues": [
+    "Previous build attempt for drip-water emoji likes failed and draft app expired; may require rebuild/retry of deployment pipeline."
+  ],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-create-a-new-dedicated-tips-page-route-at-tips-and-add-it-to-the-tanstack-router-route-tree-so-it-is-accessible-as-a-normal-page-in-the-spa",
-      "title": "Create a new dedicated Tips page route at \"/tips\" and add it to the TanStack Router route tree so it is accessible as a normal page in the SPA.",
+      "id": "feature-create-a-new-public-facts-page-that-displays-the-provided-human-urine-facts-as-a-readable-styled-list-english-text-consistent-with-the-existing-tailwind-shadcn-card-styling-used-on-the-tips-page",
+      "title": "Create a new public \"Facts\" page that displays the provided human urine facts as a readable, styled list (English text), consistent with the existing Tailwind + shadcn Card styling used on the Tips page.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-implement-the-tips-page-ui-containing-the-drinking-water-tips-content-as-a-readable-responsive-layout-using-existing-ui-components-and-tailwind-styling-with-all-user-facing-text-in-english",
-      "title": "Implement the Tips page UI containing the drinking-water tips content as a readable, responsive layout using existing UI components and Tailwind styling, with all user-facing text in English.",
+      "id": "feature-add-routing-for-the-new-facts-page-at-path-facts-using-the-existing-tanstack-router-pattern-in-frontend-src-app-tsx-lazy-loaded-like-other-pages",
+      "title": "Add routing for the new Facts page at path \"/facts\" using the existing TanStack Router pattern in frontend/src/App.tsx (lazy-loaded like other pages).",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-add-navigation-access-to-the-tips-page-from-the-app-s-header-navigation-desktop-and-mobile-menu-so-users-can-reach-tips-easily",
-      "title": "Add navigation access to the Tips page from the app’s header navigation (desktop) and mobile menu so users can reach \"/tips\" easily.",
+      "id": "feature-add-navigation-entry-for-the-new-facts-page-to-both-the-desktop-header-navigation-frontend-src-components-layout-applayout-tsx-and-the-mobile-menu-frontend-src-components-layout-mobilenav-tsx",
+      "title": "Add navigation entry for the new Facts page to both the desktop header navigation (frontend/src/components/layout/AppLayout.tsx) and the mobile menu (frontend/src/components/layout/MobileNav.tsx).",
       "reqIds": [
         "REQ-3"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-apply-a-cohesive-visual-theme-for-the-new-tips-page-that-matches-the-existing-site-s-warm-golden-water-aesthetic-warm-gold-amber-neutrals-and-keep-styling-consistent-with-the-current-layout-components",
-      "title": "Apply a cohesive visual theme for the new Tips page that matches the existing site’s warm “Golden Water” aesthetic (warm gold/amber neutrals), and keep styling consistent with the current layout components.",
-      "reqIds": [
-        "REQ-4"
       ],
       "version": 1
     }
@@ -42,12 +36,18 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Create a new dedicated “Tips” page on the website and add the drinking-water tips content to it.",
+      "summary": "Add drip-water emoji like button on the feed (single reaction option).",
       "reqIds": [],
-      "status": "in_progress"
+      "status": "pending"
+    },
+    {
+      "id": "AR-2",
+      "summary": "Add a new Facts page to the website and populate it with the provided human urine facts.",
+      "reqIds": [],
+      "status": "pending"
     }
   ],
-  "projectName": "Add dedicated Tips page with drinking-water tips",
+  "projectName": "Add a new Facts page with urine facts",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
