--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,42 +1,40 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "App with a new monetization page named \"LOVE THE LIQUID\" that embeds the Ko-fi page and includes a button link plus a title.",
-  "architectural_notes": [
-    "Monetization will be implemented as a dedicated page containing an embedded Ko-fi view plus a button link to https://ko-fi.com/painparadise."
-  ],
+  "summary": "Optimize an existing website for performance across all aspects (frontend and backend), aiming for faster load times and overall speed improvements.",
+  "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-create-a-new-public-page-titled-love-the-liquid-that-includes-1-a-prominent-title-at-the-top-and-2-an-embedded-view-of-https-ko-fi-com-painparadise-on-the-page",
-      "title": "Create a new public page titled \"LOVE THE LIQUID\" that includes (1) a prominent title at the top and (2) an embedded view of https://ko-fi.com/painparadise on the page.",
+      "id": "feature-reduce-frontend-load-time-and-runtime-re-rendering-by-optimizing-react-component-rendering-in-high-traffic-views-especially-the-feed-and-ensuring-expensive-computations-are-memoized-and-or-moved-out-of-render-paths",
+      "title": "Reduce frontend load time and runtime re-rendering by optimizing React component rendering in high-traffic views (especially the feed) and ensuring expensive computations are memoized and/or moved out of render paths.",
       "reqIds": [
-        "REQ-4"
+        "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-add-a-clear-call-to-action-button-on-the-love-the-liquid-page-that-links-to-https-ko-fi-com-painparadise",
-      "title": "Add a clear call-to-action button on the \"LOVE THE LIQUID\" page that links to https://ko-fi.com/painparadise.",
+      "id": "feature-optimize-react-query-usage-to-reduce-unnecessary-network-calls-and-ui-blocking-by-tuning-caching-refetch-behavior-and-invalidation-patterns-for-posts-comments-admin-views-and-guidelines",
+      "title": "Optimize React Query usage to reduce unnecessary network calls and UI blocking by tuning caching, refetch behavior, and invalidation patterns for posts, comments, admin views, and guidelines.",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-improve-feed-scalability-by-adding-backend-supported-pagination-or-windowed-retrieval-for-posts-and-updating-the-frontend-to-request-posts-in-pages-instead-of-always-calling-the-full-post-list-endpoint",
+      "title": "Improve feed scalability by adding backend-supported pagination (or windowed retrieval) for posts and updating the frontend to request posts in pages instead of always calling the full post list endpoint.",
+      "reqIds": [
+        "REQ-3"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-lightweight-performance-instrumentation-and-sanity-checks-for-key-flows-initial-load-loading-feed-loading-post-detail-creating-a-post-so-performance-improvements-can-be-verified-during-development",
+      "title": "Add lightweight performance instrumentation and sanity checks for key flows (initial load, loading feed, loading post detail, creating a post) so performance improvements can be verified during development.",
       "reqIds": [
         "REQ-5"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-routing-for-the-new-love-the-liquid-page-using-the-existing-tanstack-router-pattern-in-frontend-src-app-tsx-with-a-stable-human-readable-path-e-g-love-the-liquid-and-lazy-loading-like-other-non-landing-pages",
-      "title": "Add routing for the new \"LOVE THE LIQUID\" page using the existing TanStack Router pattern in frontend/src/App.tsx, with a stable, human-readable path (e.g., \"/love-the-liquid\") and lazy-loading like other non-landing pages.",
-      "reqIds": [
-        "REQ-6"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-a-navigation-entry-for-the-new-love-the-liquid-page-to-both-the-desktop-header-navigation-frontend-src-components-layout-applayout-tsx-and-the-mobile-menu-frontend-src-components-layout-mobilenav-tsx",
-      "title": "Add a navigation entry for the new \"LOVE THE LIQUID\" page to both the desktop header navigation (frontend/src/components/layout/AppLayout.tsx) and the mobile menu (frontend/src/components/layout/MobileNav.tsx).",
-      "reqIds": [
-        "REQ-7"
       ],
       "version": 1
     }
@@ -44,11 +42,20 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add new monetization page \"LOVE THE LIQUID\" with embedded Ko-fi (https://ko-fi.com/painparadise), a button link, and a title",
+      "summary": "Optimize website performance across all aspects (frontend speed, backend responsiveness, load time).",
       "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-5",
+      "summary": "Improve backend responsiveness for read-heavy operations by reducing avoidable full-map scans and repeated work in common read paths (posts, comments, admin moderation views).",
+      "reqIds": [
+        "REQ-4"
+      ],
       "status": "pending"
     }
   ],
+  "gameProjectType": "none",
   "projectName": "LOVE THE LIQUID",
   "clarification_mode": "instant",
   "clarification_rounds": 0
